Java17-ified everything